gl33-master/src/test/deca/context/invalid/other/instanceOfFausse.deca
// Test invalide : instance of une classe inexsistante

class myClass{}
{
    MyClass m = new MyClass();
    
    if(m instanceof OtherClass){
        print("Erreur");
    }
}
